--- a/guide-clawdbot.html
+++ b/guide-clawdbot.html
@@ -19,7 +19,7 @@
     <style>
         /* Guide-specific styles */
         .guide-hero {
-            background: linear-gradient(135deg, #8E44AD 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #2E1A47 0%, #00E1E6 100%);
             padding: 6rem 0 4rem;
             position: relative;
             overflow: hidden;
@@ -86,7 +86,7 @@
         .section-icon {
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #8E44AD 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #2E1A47 0%, #00E1E6 100%);
             border-radius: 12px;
             display: flex;
             align-items: center;
@@ -124,7 +124,7 @@
         .step-number {
             width: 36px;
             height: 36px;
-            background: linear-gradient(135deg, #8E44AD 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #2E1A47 0%, #00E1E6 100%);
             color: white;
             border-radius: 10px;
             display: flex;
@@ -335,7 +335,7 @@
         .paywall-card .price {
             font-size: 3rem;
             font-weight: 800;
-            background: linear-gradient(135deg, #8E44AD 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #2E1A47 0%, #00E1E6 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -374,7 +374,7 @@
             align-items: center;
             justify-content: center;
             gap: 10px;
-            background: linear-gradient(135deg, #8E44AD 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #2E1A47 0%, #00E1E6 100%);
             color: white;
             padding: 15px 40px;
             border-radius: 12px;
@@ -511,7 +511,7 @@
     <main class="guide-content">
 
         <!-- What You'll Build -->
-        <div class="guide-card" style="background: linear-gradient(135deg, #8E44AD 0%, #00E1E6 100%); color: white;">
+        <div class="guide-card" style="background: linear-gradient(135deg, #2E1A47 0%, #00E1E6 100%); color: white;">
             <h3 style="color: white; margin-bottom: 15px;">What You'll Build</h3>
             <ul style="list-style: none; padding: 0; margin: 0;">
                 <li style="padding: 8px 0; display: flex; align-items: center; gap: 10px;">
