--- a/old_index.html
+++ b/old_index.html
@@ -71,7 +71,7 @@
                         <a class="nav-link dropdown-toggle" href="#services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                         <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
                             <li><a class="dropdown-item" href="service-ai.html"><i class="fas fa-brain me-2 text-primary"></i>AI Services (NEW)</a></li>
-                            <li><a class="dropdown-item" href="devscope.html"><i class="fas fa-search me-2" style="color: #8E44AD;"></i>DevScope Website Audit <span class="badge bg-success ms-2">Free</span></a></li>
+                            <li><a class="dropdown-item" href="devscope.html"><i class="fas fa-search me-2" style="color: #2E1A47;"></i>DevScope Website Audit <span class="badge bg-success ms-2">Free</span></a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="service-saas.html">Custom SaaS & Apps</a></li>
                             <li><a class="dropdown-item" href="service-mobile.html">Mobile Development</a></li>
@@ -1898,10 +1898,10 @@
         // Node definitions
         const nodes = [
             { x: 50, y: 120, label: 'RSS Feed', icon: '📡', color: '#ff6b35' },
-            { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#8E44AD' },
+            { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#2E1A47' },
             { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#9B59B6' },
             { x: 410, y: 120, label: 'Filter', icon: '⚡', color: '#10b981' },
-            { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#8E44AD' },
+            { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#2E1A47' },
             { x: 530, y: 170, label: 'Review', icon: '📊', color: '#22c55e' },
             { x: 630, y: 70, label: 'Post', icon: '📤', color: '#1d9bf0' },
         ];
