--- a/ouroboros/live-updates.html
+++ b/ouroboros/live-updates.html
@@ -18,7 +18,7 @@
             --accent-dim: rgba(0,212,170,0.2);
             --warning: #ff9f43;
             --info: #54a0ff;
-            --highlight: #8E44AD;
+            --highlight: #2E1A47;
         }
         body {
             font-family: 'Lato', -apple-system, BlinkMacSystemFont, sans-serif;
