--- a/ri-3d-scatter.html
+++ b/ri-3d-scatter.html
@@ -42,7 +42,7 @@
             min-width: 150px;
             cursor: pointer;
         }
-        select:hover { border-color: #8E44AD; }
+        select:hover { border-color: #2E1A47; }
         .checkbox-group {
             display: flex;
             gap: 1rem;
@@ -59,8 +59,8 @@
             border: 1px solid transparent;
             transition: all 0.2s;
         }
-        .checkbox-label:hover { border-color: #8E44AD; }
-        .checkbox-label.active { background: rgba(99,102,241,0.3); border-color: #8E44AD; }
+        .checkbox-label:hover { border-color: #2E1A47; }
+        .checkbox-label.active { background: rgba(99,102,241,0.3); border-color: #2E1A47; }
         .checkbox-label input { display: none; }
         .zoom-btn {
             background: rgba(99,102,241,0.2);
@@ -72,7 +72,7 @@
             font-size: 0.85rem;
             transition: all 0.2s;
         }
-        .zoom-btn:hover { background: rgba(99,102,241,0.4); border-color: #8E44AD; }
+        .zoom-btn:hover { background: rgba(99,102,241,0.4); border-color: #2E1A47; }
         .stats {
             margin-left: auto;
             display: flex;
