--- a/sell-your-home.html
+++ b/sell-your-home.html
@@ -37,7 +37,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 700;
-            background: linear-gradient(135deg, #8E44AD, #8E44AD);
+            background: linear-gradient(135deg, #2E1A47, #2E1A47);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             text-decoration: none;
@@ -55,7 +55,7 @@
         }
         .nav-links a:hover { color: #e2e8f0; }
         .nav-cta {
-            background: linear-gradient(135deg, #8E44AD, #4f46e5);
+            background: linear-gradient(135deg, #2E1A47, #4f46e5);
             padding: 0.5rem 1rem;
             border-radius: 8px;
             color: white !important;
@@ -204,7 +204,7 @@
             color: #64748b;
             font-size: 0.85rem;
         }
-        .footer a { color: #8E44AD; }
+        .footer a { color: #2E1A47; }
     </style>
 </head>
 <body>
@@ -392,7 +392,7 @@
                         ${l.description ? `<p style="color:#94a3b8;font-size:0.85rem;margin-bottom:0.75rem">${l.description.substring(0, 100)}${l.description.length > 100 ? '...' : ''}</p>` : ''}
                         <div style="display:flex;justify-content:space-between;align-items:center;margin-top:0.5rem">
                             <span style="color:#64748b;font-size:0.75rem">${daysAgo} days ago</span>
-                            <button onclick="contactSeller(${idx})" style="background:#8E44AD;padding:0.4rem 0.8rem;font-size:0.8rem">📧 Contact</button>
+                            <button onclick="contactSeller(${idx})" style="background:#2E1A47;padding:0.4rem 0.8rem;font-size:0.8rem">📧 Contact</button>
                         </div>
                     </div>
                 </div>`;
