--- a/service-aws.html
+++ b/service-aws.html
@@ -23,7 +23,7 @@
 
     <style>
         :root {
-            --primary: #8E44AD;
+            --primary: #2E1A47;
             --primary-light: #9B59B6;
             --accent: #00E1E6;
             --bg-dark: #0a0a0f;
