--- a/swiftshot.html
+++ b/swiftshot.html
@@ -27,7 +27,7 @@
             --border: #3f3f46;
             --text: #fafafa;
             --text-muted: #a1a1aa;
-            --primary: #8E44AD;
+            --primary: #2E1A47;
             --primary-hover: #1d4ed8;
             --accent: #FBBF24;
             --accent-glow: rgba(251, 191, 36, 0.3);
