--- a/blog-ai-agents-consciousness-moltbook.html
+++ b/blog-ai-agents-consciousness-moltbook.html
@@ -27,7 +27,7 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --primary: #8E44AD;
+            --primary: #2E1A47;
             --primary-light: #9B59B6;
             --accent: #00E1E6;
             --bg-dark: #0a0a0f;
