--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 
     <meta name="theme-color" content="#0a0a0f">
 
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%238E44AD'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%232E1A47'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
         }
 
         :root {
-            --primary: #8E44AD;
+            --primary: #2E1A47;
             --primary-light: #9B59B6;
             --accent: #00E1E6;
             --accent-glow: rgba(34, 211, 238, 0.3);
@@ -259,16 +259,16 @@
             background: linear-gradient(135deg, #f59e0b, #ef4444);
         }
         .blog-card:nth-child(3) .blog-card-image::before {
-            background: linear-gradient(135deg, #8E44AD, #00E1E6);
+            background: linear-gradient(135deg, #2E1A47, #00E1E6);
         }
         .blog-card:nth-child(4) .blog-card-image::before {
-            background: linear-gradient(135deg, #10b981, #8E44AD);
+            background: linear-gradient(135deg, #10b981, #2E1A47);
         }
         .blog-card:nth-child(5) .blog-card-image::before {
             background: linear-gradient(135deg, #f59e0b, #ef4444);
         }
         .blog-card:nth-child(6) .blog-card-image::before {
-            background: linear-gradient(135deg, #9B59B6, #8E44AD);
+            background: linear-gradient(135deg, #9B59B6, #2E1A47);
         }
 
         .blog-card-content {
