--- a/colony-digest.html
+++ b/colony-digest.html
@@ -15,7 +15,7 @@
         }
         .header {
             background: rgba(15, 23, 42, 0.95);
-            border-bottom: 2px solid #8E44AD;
+            border-bottom: 2px solid #2E1A47;
             padding: 2rem;
             text-align: center;
         }
@@ -26,7 +26,7 @@
             margin-bottom: 0.5rem;
         }
         .header .subtitle {
-            color: #8E44AD;
+            color: #2E1A47;
             font-size: 1.1rem;
             font-style: italic;
         }
@@ -37,7 +37,7 @@
         .container { max-width: 900px; margin: 0 auto; padding: 2rem; }
         .intro {
             background: rgba(0, 81, 230, 0.1);
-            border-left: 4px solid #8E44AD;
+            border-left: 4px solid #2E1A47;
             padding: 1.5rem;
             margin-bottom: 2rem;
             font-size: 1.1rem;
@@ -77,7 +77,7 @@
         }
         .section { margin-bottom: 1.5rem; }
         .section-label {
-            color: #8E44AD;
+            color: #2E1A47;
             font-size: 0.85rem;
             text-transform: uppercase;
             letter-spacing: 0.1em;
@@ -101,7 +101,7 @@
             content: "→";
             position: absolute;
             left: 0;
-            color: #8E44AD;
+            color: #2E1A47;
         }
         .connections {
             background: rgba(0, 81, 230, 0.1);
@@ -116,7 +116,7 @@
             color: #64748b;
             font-size: 0.9rem;
         }
-        .footer a { color: #8E44AD; }
+        .footer a { color: #2E1A47; }
         .loading { text-align: center; padding: 4rem; color: #64748b; }
         .snake { font-size: 2rem; animation: pulse 2s infinite; display: inline-block; }
         @keyframes pulse {
