--- a/docforge/taskpane-simple.html
+++ b/docforge/taskpane-simple.html
@@ -52,7 +52,7 @@
         }
         .search-box:focus {
             outline: none;
-            border-color: #8E44AD;
+            border-color: #2E1A47;
         }
         .category {
             margin-bottom: 16px;
@@ -83,7 +83,7 @@
             transition: all 0.15s;
         }
         .template-item:hover {
-            border-color: #8E44AD;
+            border-color: #2E1A47;
             background: #eff6ff;
         }
         .template-icon {
@@ -151,9 +151,9 @@
         }
         .toolbar button:hover { background: #f3f4f6; }
         .toolbar button.primary {
-            background: #8E44AD;
+            background: #2E1A47;
             color: white;
-            border-color: #8E44AD;
+            border-color: #2E1A47;
         }
         .toolbar button.primary:hover { background: #1d4ed8; }
         .toolbar select {
@@ -189,7 +189,7 @@
         }
         .field input:focus, .field select:focus, .field textarea:focus {
             outline: none;
-            border-color: #8E44AD;
+            border-color: #2E1A47;
             box-shadow: 0 0 0 2px rgba(37,99,235,0.1);
         }
         .field textarea { resize: vertical; min-height: 60px; }
@@ -208,7 +208,7 @@
         }
         .status-bar.success { background: #059669; display: block; }
         .status-bar.error { background: #dc2626; display: block; }
-        .status-bar.info { background: #8E44AD; display: block; }
+        .status-bar.info { background: #2E1A47; display: block; }
     </style>
 </head>
 <body>
