--- a/generate-icons.html
+++ b/generate-icons.html
@@ -4,11 +4,11 @@
     <title>Generate StaffSync PWA Icons</title>
     <style>
         body { font-family: -apple-system, sans-serif; max-width: 600px; margin: 40px auto; padding: 20px; }
-        h1 { color: #8E44AD; }
+        h1 { color: #2E1A47; }
         .icon-preview { display: flex; gap: 20px; margin: 20px 0; align-items: end; }
         .icon-box { text-align: center; }
         canvas { border: 1px solid #ddd; border-radius: 12px; }
-        button { background: #8E44AD; color: white; border: none; padding: 12px 24px; border-radius: 6px; cursor: pointer; font-size: 16px; margin: 5px; }
+        button { background: #2E1A47; color: white; border: none; padding: 12px 24px; border-radius: 6px; cursor: pointer; font-size: 16px; margin: 5px; }
         button:hover { background: #1d4ed8; }
         .success { color: #059669; margin-top: 20px; }
         .instructions { background: #f3f4f6; padding: 15px; border-radius: 8px; margin-top: 20px; }
@@ -55,7 +55,7 @@
 
             // Background gradient
             const gradient = ctx.createLinearGradient(0, 0, size, size);
-            gradient.addColorStop(0, '#8E44AD');
+            gradient.addColorStop(0, '#2E1A47');
             gradient.addColorStop(1, '#1d4ed8');
 
             // Rounded rectangle background
@@ -120,8 +120,8 @@
 
             // Staff dots
             const dots = [
-                {x: 149, y: 232, color: '#8E44AD'},
-                {x: 256, y: 232, color: '#8E44AD'},
+                {x: 149, y: 232, color: '#2E1A47'},
+                {x: 256, y: 232, color: '#2E1A47'},
                 {x: 362, y: 232, color: '#f59e0b'},
                 {x: 149, y: 384, color: '#06b6d4'},
                 {x: 362, y: 384, color: '#10b981'}
