--- a/index-new.html
+++ b/index-new.html
@@ -22,7 +22,7 @@
             --text: #f8fafc;
             --muted: #94a3b8;
             --primary: #9B59B6;
-            --primary-dark: #8E44AD;
+            --primary-dark: #2E1A47;
             --accent: #00E1E6;
             --success: #34d399;
         }
