--- a/ouroboros/colony-dashboard.html
+++ b/ouroboros/colony-dashboard.html
@@ -45,7 +45,7 @@
         }
         .stat-value.orange { color: #ff9f43; }
         .stat-value.blue { color: #54a0ff; }
-        .stat-value.highlight-text { color: #8E44AD; }
+        .stat-value.highlight-text { color: #2E1A47; }
         .stat-label { color: rgba(255,255,255,0.5); font-size: 0.85rem; margin-top: 4px; }
         
         .section-title {
