--- a/public/draftbridge/taskpane/style-showcase.html
+++ b/public/draftbridge/taskpane/style-showcase.html
@@ -271,7 +271,7 @@
                 <div class="color-preview" style="background: var(--df-primary);"></div>
                 <div class="color-info">
                     <div class="color-name">Primary</div>
-                    <div class="color-value">#8E44AD</div>
+                    <div class="color-value">#2E1A47</div>
                 </div>
             </div>
             <div class="color-swatch">
