--- a/ri-report-docs.html
+++ b/ri-report-docs.html
@@ -58,7 +58,7 @@
     th { color: #6C5CE7; background: rgba(99,102,241,0.1); }
     ul, ol { margin: 1rem 0 1rem 1.5rem; color: #94a3b8; }
     li { margin: 0.5rem 0; }
-    a { color: #8E44AD; text-decoration: none; }
+    a { color: #2E1A47; text-decoration: none; }
     a:hover { text-decoration: underline; }
     .toc { background: rgba(99,102,241,0.1); padding: 1rem; border-radius: 8px; margin: 1rem 0; }
     .toc a { display: block; padding: 0.3rem 0; }
@@ -70,7 +70,7 @@
       font-weight: 600;
     }
     .badge-done { background: #10b981; color: white; }
-    .badge-new { background: #8E44AD; color: white; }
+    .badge-new { background: #2E1A47; color: white; }
     .badge-perf { background: #f59e0b; color: black; }
   </style>
 </head>
