--- a/swiftshot-comparison.html
+++ b/swiftshot-comparison.html
@@ -17,7 +17,7 @@
             --border: #3f3f46;
             --text: #fafafa;
             --text-muted: #a1a1aa;
-            --primary: #8E44AD;
+            --primary: #2E1A47;
             --primary-hover: #4f46e5;
             --accent: #00E1E6;
             --success: #10b981;
