--- a/youtube-trends.html
+++ b/youtube-trends.html
@@ -469,7 +469,7 @@
         
         .topic-bar .topic-bar-fill {
             height: 100%;
-            background: linear-gradient(90deg, #8E44AD, #9B59B6);
+            background: linear-gradient(90deg, #2E1A47, #9B59B6);
             border-radius: 4px;
             display: flex;
             align-items: center;
