--- a/index.html
+++ b/index.html
@@ -77,6 +77,79 @@
             -moz-osx-font-smoothing: grayscale;
         }
 
+        /* Aurora background texture */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: -2;
+            background:
+                /* Aurora blobs - muted purple */
+                radial-gradient(ellipse 80% 50% at 20% 20%, rgba(75, 44, 94, 0.4), transparent 60%),
+                radial-gradient(ellipse 60% 70% at 80% 30%, rgba(46, 26, 71, 0.35), transparent 55%),
+                radial-gradient(ellipse 90% 60% at 10% 70%, rgba(108, 92, 231, 0.2), transparent 50%),
+                /* Aurora blobs - muted cyan */
+                radial-gradient(ellipse 70% 50% at 75% 80%, rgba(0, 225, 230, 0.12), transparent 55%),
+                radial-gradient(ellipse 50% 80% at 50% 50%, rgba(0, 225, 230, 0.08), transparent 60%),
+                /* Deep base gradient */
+                linear-gradient(180deg, #0a0a12 0%, #0d1117 30%, #0a0f18 60%, #0a0a12 100%);
+            animation: auroraShift 30s ease-in-out infinite alternate;
+        }
+
+        @keyframes auroraShift {
+            0% { background-position: 0% 0%, 100% 0%, 0% 100%, 100% 100%, 50% 50%, 0% 0%; }
+            100% { background-position: 20% 10%, 80% 20%, 20% 80%, 80% 90%, 60% 40%, 0% 0%; }
+        }
+
+        /* Grid lines overlay */
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: -1;
+            background-image:
+                /* Vertical grid lines */
+                repeating-linear-gradient(
+                    90deg,
+                    transparent,
+                    transparent 100px,
+                    rgba(108, 92, 231, 0.03) 100px,
+                    rgba(108, 92, 231, 0.03) 101px
+                ),
+                /* Horizontal grid lines */
+                repeating-linear-gradient(
+                    0deg,
+                    transparent,
+                    transparent 100px,
+                    rgba(0, 225, 230, 0.02) 100px,
+                    rgba(0, 225, 230, 0.02) 101px
+                );
+            /* Film grain noise via SVG filter */
+            filter: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E#noise");
+            opacity: 0.4;
+        }
+
+        /* Noise texture layer */
+        .noise-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 9999;
+            opacity: 0.035;
+            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
+        }
+
         h1, h2, h3, h4, h5, h6, .heading-font {
             font-family: 'Lato', -apple-system, sans-serif;
         }
@@ -3706,6 +3779,7 @@
     </script>
 </head>
 <body>
+    <div class="noise-overlay" aria-hidden="true"></div>
     <!-- Skip to Content Link (Accessibility) -->
     <a href="#main-content" class="skip-to-content">Skip to main content</a>
 
