--- a/index.html
+++ b/index.html
@@ -120,24 +120,21 @@
                 repeating-linear-gradient(
                     90deg,
                     transparent,
-                    transparent 100px,
-                    rgba(108, 92, 231, 0.03) 100px,
-                    rgba(108, 92, 231, 0.03) 101px
+                    transparent 120px,
+                    rgba(108, 92, 231, 0.04) 120px,
+                    rgba(108, 92, 231, 0.04) 121px
                 ),
                 /* Horizontal grid lines */
                 repeating-linear-gradient(
                     0deg,
                     transparent,
-                    transparent 100px,
-                    rgba(0, 225, 230, 0.02) 100px,
-                    rgba(0, 225, 230, 0.02) 101px
+                    transparent 120px,
+                    rgba(0, 225, 230, 0.03) 120px,
+                    rgba(0, 225, 230, 0.03) 121px
                 );
-            /* Film grain noise via SVG filter */
-            filter: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E#noise");
-            opacity: 0.4;
         }
 
-        /* Noise texture layer */
+        /* Noise texture layer - very subtle */
         .noise-overlay {
             position: fixed;
             top: 0;
@@ -146,8 +143,8 @@
             height: 100%;
             pointer-events: none;
             z-index: 9999;
-            opacity: 0.035;
-            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
+            opacity: 0.012;
+            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
         }
 
         h1, h2, h3, h4, h5, h6, .heading-font {
