Complete color overhaul: #4C69F5 primary, #654CF4 accent purple, #2E1A47 deep purple, clean background

--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
         }
 
         :root {
-            --primary: #2E1A47;
-            --primary-light: #9B59B6;
-            --primary-deep: #4B2C5E;
+            --primary: #4C69F5;
+            --primary-light: #654CF4;
+            --primary-deep: #2E1A47;
             --accent: #00E1E6;
-            --accent-sky: #6C5CE7;
-            --accent-deep: #1A1B4B;
-            --accent-glow: rgba(46, 26, 71, 0.4);
+            --accent-sky: #654CF4;
+            --accent-deep: #2E1A47;
+            --accent-glow: rgba(76, 105, 245, 0.3);
             
             --bg-dark: #0a0a0f;
-            --bg-card: rgba(46, 26, 71, 0.6);
-            --bg-glass: rgba(46, 26, 71, 0.2);
+            --bg-card: rgba(20, 20, 35, 0.8);
+            --bg-glass: rgba(76, 105, 245, 0.08);
             --text: #f8fafc;
             --text-muted: #a1afc4;
-            --border: rgba(46, 26, 71, 0.4);
+            --border: rgba(76, 105, 245, 0.15);
             --success: #10b981;
             --warning: #f59e0b;
-            --focus-ring: rgba(46, 26, 71, 0.6);
+            --focus-ring: rgba(76, 105, 245, 0.4);
         }
 
         html {
@@ -77,7 +77,7 @@
             -moz-osx-font-smoothing: grayscale;
         }
 
-        /* Aurora background texture */
+        /* Clean gradient background */
         body::before {
             content: '';
             position: fixed;
@@ -87,64 +87,10 @@
             height: 100%;
             pointer-events: none;
             z-index: -2;
-            background:
-                /* Aurora blobs - muted purple */
-                radial-gradient(ellipse 80% 50% at 20% 20%, rgba(75, 44, 94, 0.4), transparent 60%),
-                radial-gradient(ellipse 60% 70% at 80% 30%, rgba(46, 26, 71, 0.35), transparent 55%),
-                radial-gradient(ellipse 90% 60% at 10% 70%, rgba(108, 92, 231, 0.2), transparent 50%),
-                /* Aurora blobs - muted cyan */
-                radial-gradient(ellipse 70% 50% at 75% 80%, rgba(0, 225, 230, 0.12), transparent 55%),
-                radial-gradient(ellipse 50% 80% at 50% 50%, rgba(0, 225, 230, 0.08), transparent 60%),
-                /* Deep base gradient */
-                linear-gradient(180deg, #0a0a12 0%, #0d1117 30%, #0a0f18 60%, #0a0a12 100%);
-            animation: auroraShift 30s ease-in-out infinite alternate;
-        }
-
-        @keyframes auroraShift {
-            0% { background-position: 0% 0%, 100% 0%, 0% 100%, 100% 100%, 50% 50%, 0% 0%; }
-            100% { background-position: 20% 10%, 80% 20%, 20% 80%, 80% 90%, 60% 40%, 0% 0%; }
-        }
-
-        /* Grid lines overlay */
-        body::after {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: -1;
-            background-image:
-                /* Vertical grid lines */
-                repeating-linear-gradient(
-                    90deg,
-                    transparent,
-                    transparent 120px,
-                    rgba(108, 92, 231, 0.04) 120px,
-                    rgba(108, 92, 231, 0.04) 121px
-                ),
-                /* Horizontal grid lines */
-                repeating-linear-gradient(
-                    0deg,
-                    transparent,
-                    transparent 120px,
-                    rgba(0, 225, 230, 0.03) 120px,
-                    rgba(0, 225, 230, 0.03) 121px
-                );
-        }
-
-        /* Noise texture layer - very subtle */
-        .noise-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: 9999;
-            opacity: 0.012;
-            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
+            background: 
+                radial-gradient(ellipse 80% 50% at 70% 20%, rgba(76, 105, 245, 0.08), transparent 50%),
+                radial-gradient(ellipse 60% 60% at 20% 80%, rgba(101, 76, 244, 0.06), transparent 50%),
+                linear-gradient(180deg, #0a0a0f 0%, #0d0d14 50%, #0a0a0f 100%);
         }
 
         h1, h2, h3, h4, h5, h6, .heading-font {
@@ -931,9 +877,9 @@
             background: linear-gradient(
                 var(--gradient-angle),
                 #00E1E6 0%,
-                #9B59B6 25%,
-                #2E1A47 50%,
-                #4B2C5E 75%,
+                #4C69F5 25%,
+                #654CF4 50%,
+                #4C69F5 75%,
                 #00E1E6 100%
             );
             background-size: 300% 300%;
@@ -942,7 +888,7 @@
             background-clip: text;
             animation: gradientFlow 4s linear infinite, gradientMove 8s ease-in-out infinite;
             display: inline-block;
-            filter: drop-shadow(0 0 30px rgba(142, 68, 173, 0.5));
+            filter: drop-shadow(0 0 25px rgba(76, 105, 245, 0.4));
         }
 
         @keyframes gradientFlow {
@@ -1149,8 +1095,8 @@
 
         .btn-primary {
             --glow-color: #00E1E6;
-            --glow-spread: rgba(46, 26, 71, 0.6);
-            --btn-bg: #2E1A47;
+            --glow-spread: rgba(76, 105, 245, 0.5);
+            --btn-bg: #4C69F5;
             background-color: var(--btn-bg);
             color: var(--glow-color);
             border: 0.2em solid var(--glow-color);
@@ -1197,7 +1143,7 @@
         }
 
         .btn-secondary {
-            --glow-color: #9B59B6;
+            --glow-color: #654CF4;
             --glow-spread: rgba(76, 130, 230, 0.4);
             --btn-bg: rgba(0, 81, 230, 0.2);
             background-color: var(--btn-bg);
@@ -1513,7 +1459,7 @@
         }
 
         .service-card:hover::before {
-            background: linear-gradient(315deg, #00E1E6, #2E1A47, #6C5CE7);
+            background: linear-gradient(315deg, #00E1E6, #2E1A47, #654CF4);
         }
 
         /* Service icon with hover animation */
@@ -3047,7 +2993,7 @@
 
         .carousel-card .card-badge.fun {
             background: rgba(168, 85, 247, 0.2);
-            color: #9B59B6;
+            color: #654CF4;
             border: 1px solid rgba(168, 85, 247, 0.3);
         }
 
@@ -3413,7 +3359,7 @@
             padding: 1rem;
             overflow-y: auto;
             max-height: 280px;
-            background: rgba(46, 26, 71, 0.8);
+            background: rgba(20, 20, 35, 0.9);
         }
 
         .chat-message {
@@ -3467,7 +3413,7 @@
             flex-wrap: wrap;
             gap: 0.5rem;
             padding: 0.75rem 1rem;
-            background: rgba(46, 26, 71, 0.6);
+            background: rgba(20, 20, 35, 0.8);
             border-top: 1px solid var(--border);
         }
 
@@ -3776,7 +3722,6 @@
     </script>
 </head>
 <body>
-    <div class="noise-overlay" aria-hidden="true"></div>
     <!-- Skip to Content Link (Accessibility) -->
     <a href="#main-content" class="skip-to-content">Skip to main content</a>
 
@@ -7795,7 +7740,7 @@
     scene.add(cable2);
 
     // Robot 3: Purple robot carrying data (walking)
-    const robot3 = createRobot(0x9B59B6, 0x00E1E6);
+    const robot3 = createRobot(0x654CF4, 0x00E1E6);
     robot3.position.set(1.5, 0.05, 2.5);
     robot3.rotation.y = Math.PI * 0.2;
     robot3.scale.setScalar(0.8);
@@ -7805,7 +7750,7 @@
     // Data tablet the robot is carrying
     const tablet = new THREE.Mesh(
         new THREE.BoxGeometry(0.15, 0.22, 0.01),
-        new THREE.MeshStandardMaterial({ color: 0x9B59B6, emissive: 0x9B59B6, emissiveIntensity: 0.4 })
+        new THREE.MeshStandardMaterial({ color: 0x654CF4, emissive: 0x654CF4, emissiveIntensity: 0.4 })
     );
     tablet.position.set(1.5, 0.35, 2.35);
     tablet.rotation.y = Math.PI * 0.2;
