--- a/index.html
+++ b/index.html
@@ -4574,7 +4574,7 @@
                     </button>
                 </form>
 
-                <div class="hero-buttons" style="margin-top: 1.5rem;">
+                <div style="margin-top: 1.5rem; display: flex; justify-content: center;">
                     <a href="contact.html" class="btn btn-secondary ripple" role="button" aria-label="Contact AIBridges">
                         <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
                         Contact Us
