Fix House Hunter - remove overly strict instantEquity >= 0 filter

--- a/ri-report.html
+++ b/ri-report.html
@@ -3105,7 +3105,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  bestValue: bestValue,
  bestEquity: Math.max(-20000, Math.min(EQUITY_CAP, bestValue - h.price))
  };
- }).filter(d => d && d.instantEquity >= 0 && d.discount >= minDiscount);
+ }).filter(d => d && d.discount >= minDiscount);
  
  // Sort by deal score
  deals.sort((a, b) => b.dealScore - a.dealScore);
