Add null check to filterLandDeals

--- a/ri-report.html
+++ b/ri-report.html
@@ -1973,6 +1973,10 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  }
  
  function filterLandDeals() {
+ if (!rawData || !rawData.properties) {
+   console.log('filterLandDeals: No data yet');
+   return;
+ }
  const city = document.getElementById('landCity')?.value || '';
  const minDom = parseInt(document.getElementById('landMinDom')?.value) || 0;
  const maxPrice = parseInt(document.getElementById('landMaxPrice')?.value) || Infinity;
