Remove EQUITY_CAP - fix undefined error

--- a/ri-report.html
+++ b/ri-report.html
@@ -3132,11 +3132,11 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  haircutPct: haircutPct,
  // Scenario values
  worstValue: worstValue,
- worstEquity: Math.max(-20000, Math.min(EQUITY_CAP, worstValue - h.price)),
+ worstEquity: worstValue - h.price,
  expectedValue: expectedValue,
- expectedEquity: Math.max(-20000, Math.min(EQUITY_CAP, expectedValue - h.price)),
+ expectedEquity: expectedValue - h.price,
  bestValue: bestValue,
- bestEquity: Math.max(-20000, Math.min(EQUITY_CAP, bestValue - h.price))
+ bestEquity: bestValue - h.price
  };
  });
  
